- [fix] PortAudio #850 fix included
- [fix] FM should now use low/high cuts. Carlson's rules used for filter width display in FM rx and tx
- [fix] Andromeda ModeSpecificForm shouldn't now clear on console resize
- [fix] scope in TX should now work
- [change] tweaks to waterfall agc to minimise screen wide pulse on T/R
- [change] waterfall low/high step sizes lowered to 5
- [change] multimeter container no title bar. Now applies even if not pinned. Hold shift and move mouse in the title bar area to bring it up even if hidden
- [change] removed old noise floor calc method + option from setup form
- [change] removed old http server as was non operational
- [change] cosmetic and layout improvements to setup by Sigi DH1KLM


## v2.10.3.3 Change Log
- [fix] resolved DLL load issue for Win7 and other OS's that dont have SetThreadDescription()

## v2.10.3.2 Change Log
- [fix] resolved issue where a 3 band equaliser would cause out of array bounds exception

## v2.10.3.1 Change Log
- [fix] serial data arriving could prevent Thetis from closing and could also cause UI freeze
- [change] reverted to .net framework 4.8.0 to work with more operating systems
- [change] added additional small buffer sizes to VAC config, 8, 16, 32

## v2.10.3 Change Log
- [add] T/R noise pulse in waterfall improved. Waterfall agc delayed. New option in setup to purge WDSP analyzer buffers to perform extra clear down
- [add] skin server implementation
- [add] FM tx/rx AF filters in DSP FM tab
- [add] IQ swap for each vac
- [add] additional items stored against tx profile
	- FM AF filters
	- VAC force checkbox state
	- SwapIQ
	- External audio amp checkbox state
	- PA profile is now stored against TX profile. There is an option to recover this from a TX profile change if you want to use this
	- RX EQ data and enabled state
	- WASAPI exclusive states
- [add] release notes shown on DB upgrade and button to show again from Setup->General->H/W Select