@@ -6,6 +6,6 @@ namespace Thetis
 { 
     public static class VersionInfo 
     { 
-        public static string BuildDate { get { return "11/17/23"; } }  
+        public static string BuildDate { get { return "11/19/23"; } }  
     } 
 } 
